fix: add whitespace in device information table

--- a/src/Cat/DeviceInformation.scss
+++ b/src/Cat/DeviceInformation.scss
@@ -8,6 +8,9 @@
       margin: 0;
       border-bottom: 1px solid #f0f0f0;
     }
+    dt {
+      padding-right: 1rem;
+    }
   }
   .reportedTime {
     font-size: 85%;
